synced web.config content with .htaccess files

--- a/uploads/web.config
+++ b/uploads/web.config
@@ -2,5 +2,12 @@
 <configuration>
     <system.webServer>
         <directoryBrowse enabled="false" />
+        <security>
+            <requestFiltering>
+                <fileExtensions>
+                    <add fileExtension=".php" allowed="false" />
+                </fileExtensions>
+            </requestFiltering>
+        </security>
     </system.webServer>
 </configuration>
