updated properties file

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,18 @@
-include.path=${php.global.include.path}
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.expand-tabs=true
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.indent-shift-width=2
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.spaces-per-tab=2
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.tab-size=4
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-limit-width=80
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-line-wrap=none
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=project
+file.reference.svn-nbproject=nbproject
+ignore.path=\
+    ${file.reference.svn-nbproject}
+include.path=\
+    ${php.global.include.path}
 php.version=PHP_53
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
-tags.short=true
+tags.short=false
 web.root=.
