empty nbproject path on git needs a portal 2

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /setup.php
 /setup*.php
 /web.config
-/nbproject/*
+/nbproject
 /uploads/cache/*.tmp
 /uploads/imprint/*.txt
 /uploads/logs/actions/*.log
