[Update] Server-Mod - GameQ - TS3 now available

--- a/mods/servers/gameq/packets.ini
+++ b/mods/servers/gameq/packets.ini
@@ -1,4 +1,4 @@
-; $Revision: 1.35 $
+; $Revision: 1.39 $
 
 [ase]
 status = "s"
@@ -8,6 +8,10 @@ status = "\x4A\x35\xFF\xFF\x02\x00\x02\x00\x01\x00%s"
 status = "\xfe\xfd\x00\x3b\x95\xab\x00\x05\x01\x05\x06\x08\x0a\x00\x00"
 [bf2]
 status = "\xfe\xfd\x00\x5d\xac\x81\x59\xff\xff\xff\xff\xff\xff\xff\x01"
+[bfbc2]
+status = "\x00\x00\x00\x00\x1b\x00\x00\x00\x01\x00\x00\x00\n\x00\x00\x00serverInfo\x00"
+version = "\x00\x00\x00\x00\x18\x00\x00\x00\x01\x00\x00\x00\x07\x00\x00\x00version\x00"
+players = "\x03\x00\x00\x00$\x00\x00\x00\x02\x00\x00\x00\x0b\x00\x00\x00listPlayers\x00\x03\x00\x00\x00all\x00"
 [cube]
 status = "\x00"
 [cry]
@@ -29,10 +33,11 @@ status = "\xFF\xFF\xFF\xFFFLSQ"
 [freelancer]
 status = "\x00\x02\xf1\x26\x01\x26\xf0\x90\xa6\xf0\x26\x57\x4e\xac\xa0\xec\xf8\x68\xe4\x8d\x21"
 [gamespy]
-status = "\\status\\"
-players = "\\players\\"
-basic = "\\basic\\"
-info = "\\info\\"
+status = "\x5C\x73\x74\x61\x74\x75\x73\x5C"
+players = "\x5C\x70\x6C\x61\x79\x65\x72\x73\x5C"
+basic = "\x5C\x62\x61\x73\x69\x63\x5C"
+info = "\x5C\x69\x6E\x66\x6F\x5C"
+rules = "\x5C\x72\x75\x6C\x65\x73\x5C"
 [gamespy2]
 status  = "\xFE\xFD\x00PiNG\xFF\x00\x00"
 players = "\xFE\xFD\x00PoNG\x00\xFF\xFF"
@@ -73,7 +78,8 @@ status = "\x00\x00\x00\x00"
 status = "rF_S"
 [samp]
 status = "SAMP%s%si"
-players = "SAMP%s%sc"
+players = "SAMP%s%sd"
+rules = "SAMP%s%sr"
 [savage2]
 status = "\x01"
 [sauerbraten]
@@ -87,7 +93,7 @@ challenge = "\xFF\xFF\xFF\xFF\x56\x00\x00\x00\x00"
 details = "\xFF\xFF\xFF\xFFTSource Engine Query\x00"
 players = "\xFF\xFF\xFF\xFF\x55%s"
 rules = "\xFF\xFF\xFF\xFF\x56%s"
-[goldsource] 
+[goldsource]
 ;Not used anymore, we use "source" for every server now
 challenge = "\xFF\xFF\xFF\xFF\x55\xFF\xFF\xFF\xFF"
 details = "\xFF\xFF\xFF\xFFTSource Engine Query\x00"
