[Update] Servers-Mod: Unreal Tournament 2003

--- a/mods/servers/gameq/games.ini
+++ b/mods/servers/gameq/games.ini
@@ -787,7 +787,7 @@ prot = "gamespy"
 [ut2003]
 name = "Unreal Tournament 2003"
 port = 7778
-prot = "unreal2"
+prot = "gamespy"
 [ut2004]
 ; might be custom protocol
 name = "Unreal Tournament 2004"
