Update .gitignore to ignore user defined templates and themes

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,17 @@
 /uploads/logs/errors/*.log
 /uploads/rss/*.xml
 /uploads/users/nopicture.*
+
+/templates/*
+/themes/*
+
+\!/templates/base/
+\!/templates/clansphere/
+\!/templates/index.html
+
+\!/themes/base/
+\!/themes/clansphere/
+\!/themes/custom/
+\!/themes/.htaccess
+\!/themes/index.html
+\!/themes/web.config
